Web Inspector: Frontend loaded resources from cache are not hidden as expected https://bugs.webkit.org/show_bug.cgi?id=130044

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2014-03-10
Reviewed by Timothy Hatcher.

* loader/FrameLoader.cpp:
(WebCore::FrameLoader::loadedResourceFromMemoryCache):
Use the new request that was passed in. Assume it is filled in appropriately.

* loader/cache/CachedResourceLoader.h:
* loader/cache/CachedResourceLoader.cpp:
(WebCore::CachedResourceLoader::shouldContinueAfterNotifyingLoadedFromMemoryCache):
Carry over the hidden from inspector state if the passed in request had it,
and create the request that loadedResourceFromMemoryCache will use.

* xml/XMLHttpRequest.cpp:
(WebCore::XMLHttpRequest::createRequest):
Add missing ifdefs for INSPECTOR only function.

Canonical link: https://commits.webkit.org/148045@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165427 268f45cc-cd09-0410-ab3c-d52691b4dbfc