Source/WebCore/xml/XMLHttpRequest.cpp
@@ -781,7 +781,9 @@ void XMLHttpRequest::createRequest(ExceptionCode& ec)
 
     ResourceRequest request(m_url);
     request.setHTTPMethod(m_method);
+#if ENABLE(INSPECTOR)
     request.setHiddenFromInspector(m_sendingForInspector);
+#endif
 
     InspectorInstrumentation::willLoadXHR(scriptExecutionContext(), this, m_method, m_url, m_async, m_requestEntityBody ? m_requestEntityBody->deepCopy() : 0, m_requestHeaders, m_includeCredentials);
 
